scraper witten, not tested

--- a/Pipfile
+++ b/Pipfile
@@ -8,8 +8,10 @@ flask = "*"
 beautifulsoup4 = "*"
 requests = "*"
 dateparser = "*"
+uuid = "*"
+pymongo = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
